<resources>
    <string name="app_name">Swap Manager</string>
    <string name="memory_extension">Memory extension</string>
    <string name="memory_info">Memory info</string>
    <string name="refresh">refresh</string>
    <string name="data">DATA</string>
    <string name="ram">RAM</string>
    <string name="swap">SWAP</string>
    <string name="_0">0.0</string>
    <string name="text_ram">When enough storage space is available, you an use part of it to expand you RAM.</string>
    <string name="ram_expansion">RAM Expansion</string>
    <string name="_2gb">2.0 GB</string>
    <string name="_4gb">4.0 GB</string>
    <string name="_6gb">6.0 GB</string>
    <string name="_8gb">8.0 GB</string>
    <string name="jzinferno">\@jzinferno</string>
    <string name="vierron">\@Vierron</string>
    <string name="expand_by">Expanded by</string>
    <string name="links">Links</string>
    <string name="journal">Journal</string>
    <string name="device_isn_t_rooted">Device isn\'t Rooted!</string>
    <string name="root_access_denied">Root access denied!</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
</resources>