<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/memory_extension"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">

            <TextView
                android:id="@+id/textMemoryInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_info"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                android:paddingStart="@dimen/_3sdp"
                android:paddingEnd="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:paddingStart="@dimen/_3ssp"
                android:paddingEnd="@dimen/_3sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:shadowRadius="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textMemoryInfo"
                app:layout_constraintBottom_toBottomOf="@id/textMemoryInfo"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/layoutData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutRam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textMemoryInfo">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_memory"
                    android:tint="@color/white_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/data"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textDataValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutSwap"
                app:layout_constraintStart_toEndOf="@id/layoutData"
                app:layout_constraintTop_toBottomOf="@id/textMemoryInfo">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_memory"
                    android:tint="@color/white_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/ram"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textRamValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSwap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutRam"
                app:layout_constraintTop_toBottomOf="@id/textMemoryInfo">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_memory"
                    android:tint="@color/white_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/swap"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textSwapValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@id/cardView2"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ram_expansion"
                        android:textColor="@color/white_black"
                        android:textSize="@dimen/_13ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ram"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/secondary_text"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_50sdp"
                        app:layout_constraintTop_toBottomOf="@id/textView1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <androidx.appcompat.widget.SwitchCompat
                        style="?attr/materialSwitchStyle"
                        android:id="@+id/switchRam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:checked="false" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/_14sdp"
                android:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/textExpandBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/expand_by"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_11ssp"/>

                    <com.google.android.material.slider.Slider
                        android:id="@+id/sliderRam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="2"
                        android:valueFrom="2"
                        android:valueTo="8"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textExpandBy"
                        android:enabled="false"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/textRam1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2gb"
                        app:layout_constraintTop_toBottomOf="@id/sliderRam"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/secondary_text"/>

                    <TextView
                        android:id="@+id/textRam2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4gb"
                        app:layout_constraintTop_toBottomOf="@id/sliderRam"
                        app:layout_constraintStart_toEndOf="@id/textRam1"
                        app:layout_constraintEnd_toStartOf="@id/textRam3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/secondary_text"/>

                    <TextView
                        android:id="@+id/textRam3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_6gb"
                        app:layout_constraintTop_toBottomOf="@id/sliderRam"
                        app:layout_constraintStart_toEndOf="@id/textRam2"
                        app:layout_constraintEnd_toStartOf="@id/textRam4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/secondary_text"/>

                    <TextView
                        android:id="@+id/textRam4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_8gb"
                        app:layout_constraintTop_toBottomOf="@id/sliderRam"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/secondary_text"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>